--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,13 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:mydb
+    url: jdbc:h2:tcp://localhost/~/test
     username: sa
     password:
     driverClassName: org.h2.Driver
   h2:
     console:
       enabled: true
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create
